--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,24 @@
-<h1>AjaxApp</h1>
-<%= form_with url:  "/posts", method: :post,id: "form" do |form| %>
-  <%= form.text_field :content , id: "content"%>
-  <%= form.submit '投稿する' , id: "submit" %>
-<% end %>
-
-<div id="list">
+<div>
+  <%= form_with model: @plan, url: calendars_path, class: 'form' do |f| %>
+    <%= f.label :日付を選択, class: 'lavel' %>
+    <%= f.date_field :date, class: 'date-select' %>
+    <%= f.label :予定を入力, class: 'plan' %>
+    <%= f.text_field :plan, class: 'text-input' %>
+    <%= f.submit :保存, class: 'save' %>
+  <% end %>
 </div>
 
-<% @posts.each do |post|%>
-  <div class="post" data-id=<% post.id %> data-check=<% post.checked %>>
-    <div class="post">
-    <div class="post-date">
-      投稿日時:<%= post.created_at %>
-    </div>
-    <div class="post-content">
-    <%= post.content %>
-    </div>
+  <div class='calendar'>
+    <% @week_days.each do |day| %>
+      <div class='item'>
+        <div class='date'>
+        <ul class='content'>
+        <% if day[:plans].length != 0 %>
+          <% day[:plans].each do |plan| %>
+            <li class='plan-list'>・<%= plan %></li>
+          <% end %>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
   </div>
-<% end %>
